--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,28 @@
 <resources>
     <string name="app_name">Task</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Generics -->
+    <string name="text_email">E-mail</string>
+    <string name="text_password">Senha</string>
+    <string name="text_informe_seu_email">Informe seu e-mail</string>
+    <string name="text_informe_sua_senha">Informe sua senha</string>
+    <string name="text_create_account">Criar conta</string>
+    <string name="text_recover_account">Recuperar conta</string>
+
+    <string name="text_todo">A fazer</string>
+    <string name="text_doing">Fazendo</string>
+    <string name="text_done">Feito</string>
+
+    <!-- LoginFragment -->
+    <string name="text_button_login_fragment">Login</string>
+
+    <!-- RegisterFragment -->
+    <string name="text_button_register_fragment">Criar conta</string>
+
+    <!-- RecoverAccountFragment -->
+    <string name="success_recover_email_msg">Enviamos um e-mail de recuperação de senha para</string>
+    <string name="error_recover_email_msg">Erro ao enviar um e-mail de recuperação de senha para</string>
+    <string name="error_recover_motivo_email_msg">Motivo:</string>
+    <string name="text_button_enviar">Enviar</string>
+
 </resources>
